# jaeger

./: .gitignore  db.sqlite3  pyproject.toml
jaegerserver/: admin.py  apps.py  models.py  urls.py  views.py
jaegerserver/migrations/: 0001_initial.py  0002_location.py  0003_auto_20210319_1131.py  0003_location_history.py  0003_location_monsters.py  0004_auto_20210319_1134.py  0005_merge_20210319_1238.py  0006_auto_20210319_1238.py  0007_auto_20210319_1407.py  0008_auto_20210319_1426.py
jaegerserver/static/jaegerserver/: app.css
jaegerserver/templates/: base.html
jaegerserver/templates/jaegerserver/: index.html  location_detail.html  locations.html  monster_detail.html  monster_list.html  sightings_list.html
web/: settings.py  urls.py
